v0.9.2
-------------------
* replacing strpos..substr loops in several functions by preg_match_all constructs
! runtime was broken for some movies (errors on the IMDB pages?)

v0.9.1 (20.01.2008)
-------------------
! year was screwed up when movie title contained "()"
! method rating() did not return any value on subsequent calls (only on the first)
+ added support for retrieving trailer urls (method trailers())
+ added retrieval of 'Crazy Credits' (try with 'The Blues Brothers', they have some)
+ added goof retrieval (again, you can see some with 'The Blues Brothers')
* some cleanup
* moved error message output into debug methods so they can be turned off
  (do so in imdb_config.php with the $this->debug setting)
+ added method trivia() to retrieve the trivias

v0.9.0 (06.01.2008)
-------------------
! link to SearchPlotWriters was pointing to wrong server
+ added gzip support to cache (Jörg Eitemüller)
+ added support for tv series (Jörg Eitemüller) - new methods:
  episodes() and seasons()
! fixed bug concerning genre parsing
+ added support for retrieving the movie quotes - method: quotes()

v0.8.9 (07.10.2007)
-------------------
* genre and country often contained a stupid additional field pointing to some
  "Imdb sections". Changed the code so they are no longer there.
! Link in "user comments" now points to the correct *site* (site info was missing
  so this always pointed to the local host)
* taglines() no longer returns the "update form" as latest tagline
! if the IMDB page contained no genre or country info, the concerning function
  caused an php error (strpos(): Offset not contained in string)
! cache purge caused errors when cache directory contained subdirs - fixed.

v0.8.8 (05.08.2007)
-------------------
* applied patch sent by eremini to also support BMP images
* IMDB site changes again
* moved documentation files to doc/ dir and added APIDOC there

v0.8.7 (10.03.2007)
-------------------