@@ -2,6 +2,7 @@ v0.9.2
 -------------------
 * replacing strpos..substr loops in several functions by preg_match_all constructs
 ! runtime was broken for some movies (errors on the IMDB pages?)
++ added soundtrack() method for guess what...
 
 v0.9.1 (20.01.2008)
 -------------------
